--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "identity-obj-proxy": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
